Fix binder's example nb to code that compiles

--- a/binder/example.ipynb
+++ b/binder/example.ipynb
@@ -2,22 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import decorator\n",
+    "from decoratortest import deprecated\n",
     "\n",
-    "\n",
-    "@decorator.deprecated\n",
+    "@deprecated\n",
     "def foo(): pass\n",
     "\n",
+    "def bar(): pass\n",
     "\n",
-    "def bar():\n",
-    "    foo()\n",
-    "\n",
-    "\n",
-    "foo()\n"
+    "foo()"
    ]
   }
  ],
