Add example of invalid code on notebook

--- a/binder/default_decorator_example.ipynb
+++ b/binder/default_decorator_example.ipynb
@@ -23,6 +23,25 @@
     "\n",
     "old = SomeOldClass()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!!!@@@384yhufj # test the behavior of invalid code\n",
+    "\n",
+    "\n",
+    "some_old_function(2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -41,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
